Fix question overflow and spacing

--- a/src/app/pages/player/assessment/assessment.page.scss
+++ b/src/app/pages/player/assessment/assessment.page.scss
@@ -26,17 +26,22 @@
   justify-content: space-evenly;
   flex-direction: column;
   display: flex;
-  min-height: calc(100% - 48px);
   max-width: 480px;
   width: 100%;
+  height: calc(100% - 48px);
 
   .card-content-ios{
     padding-top: 0;
+    overflow: auto;
   }
 
   .explanation-icon{
     font-size: 50px;
     margin-bottom: 20px;
+  }
+
+  .explanation-text {
+    font-size:14px;
   }
 }
 
