--- a/src/app/pages/player/assessment/components/multiple-choice/multiple-choice.component.scss
+++ b/src/app/pages/player/assessment/components/multiple-choice/multiple-choice.component.scss
@@ -15,7 +15,6 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    flex-grow: 1;
   }
   ion-card-title{
     font-size: 1rem;
@@ -24,6 +23,5 @@
   ion-card-header{
     display: flex;
     flex-direction: column;
-    flex-grow: 1;
   }
 }
