--- a/src/app/pages/player/assessment/components/simple-choice/simple-choice.component.scss
+++ b/src/app/pages/player/assessment/components/simple-choice/simple-choice.component.scss
@@ -23,6 +23,5 @@
   ion-card-header{
     display: flex;
     flex-direction: column;
-    flex-grow: 1;
   }
 }
